Добавляет правки в таблицу

--- a/source/comment-popup.html
+++ b/source/comment-popup.html
@@ -264,7 +264,7 @@
                 </svg>
               </button>
             </div>
-
+            <div class="table-popup__header"></div>
             <div class="table-fixed table-fixed--all-screen">
               <table>
                 <thead>
@@ -272,6 +272,12 @@
                     <th>Заголовок</th>
                     <th>Рыбным текстом</th>
                     <th>Называется текст</th>
+                    <th>Служащий для временного наполнения макета</th>
+                    <th>В публикациях или производстве веб-сайтов</th>
+                    <th>Заголовок</th>
+                    <th>Служащий для временного наполнения макета</th>
+                    <th>В публикациях или производстве веб-сайтов</th>
+                    <th>Заголовок</th>
                     <th>Служащий для временного наполнения макета</th>
                     <th>В публикациях или производстве веб-сайтов</th>
                     <th>Заголовок</th>
@@ -285,6 +291,12 @@
                     <td>Рыбный текст</td>
                     <td>Рыбный текст</td>
                     <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>2</td>
@@ -293,6 +305,12 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>15,5 $</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>3</td>
@@ -301,6 +319,12 @@
                     <td>Рыбный текст также известен</td>
                     <td>Рыбный текст</td>
                     <td>16 005 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>4</td>
@@ -309,6 +333,12 @@
                     <td>Рыбный текст</td>
                     <td>Как правило их</td>
                     <td>22 500 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>5</td>
@@ -317,6 +347,12 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>12 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>6</td>
@@ -325,11 +361,23 @@
                     <td>Рыбный текст также известен</td>
                     <td>Рыбный текст</td>
                     <td>100 000 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>7</td>
                     <td>Рыбным текстом</td>
                     <td>Пока финальный текст еще не создан</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                     <td>Рыбный текст</td>
                     <td>Рыбный текст</td>
                     <td>1 220 096 ₽ </td>
@@ -341,6 +389,12 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>15,5 $</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>9</td>
@@ -349,6 +403,12 @@
                     <td>Рыбный текст также известен</td>
                     <td>Рыбный текст</td>
                     <td>16 005 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>10</td>
@@ -357,6 +417,12 @@
                     <td>Рыбный текст</td>
                     <td>Как правило их</td>
                     <td>22 500 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>11</td>
@@ -365,6 +431,12 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>12 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>12</td>
@@ -373,11 +445,23 @@
                     <td>Рыбный текст также известен</td>
                     <td>Рыбный текст</td>
                     <td>100 000 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>13</td>
                     <td>Рыбным текстом</td>
                     <td>Пока финальный текст еще не создан</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                     <td>Рыбный текст</td>
                     <td>Рыбный текст</td>
                     <td>1 220 096 ₽ </td>
@@ -389,11 +473,23 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>15,5 $</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>15</td>
                     <td>Рыбным текстом</td>
                     <td>Пока финальный текст еще не создан</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                     <td>Рыбный текст</td>
                     <td>Рыбный текст</td>
                     <td>1 220 096 ₽ </td>
@@ -405,6 +501,12 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>15,5 $</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>17</td>
@@ -413,6 +515,12 @@
                     <td>Рыбный текст также известен</td>
                     <td>Рыбный текст</td>
                     <td>16 005 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>18</td>
@@ -421,6 +529,12 @@
                     <td>Рыбный текст</td>
                     <td>Как правило их</td>
                     <td>22 500 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>19</td>
@@ -429,6 +543,12 @@
                     <td>Рыбный текст</td>
                     <td>Уже в 16-том веке</td>
                     <td>12 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                   <tr>
                     <td>20</td>
@@ -437,6 +557,12 @@
                     <td>Рыбный текст также известен</td>
                     <td>Рыбный текст</td>
                     <td>100 000 ₽</td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
+                    <td>Рыбный текст</td>
+                    <td>Рыбный текст</td>
+                    <td>1 220 096 ₽ </td>
                   </tr>
                 </tbody>
               </table>
