Актуализирует состояние проекта

--- a/source/project-page.html
+++ b/source/project-page.html
@@ -131,7 +131,7 @@
 
               <p class="project-page__budget">
                 Бюджет
-                <span class="project-page__budget-value">4 560 000 &#x20bd;</span>
+                <span class="project-page__budget-value">4 560 000 <span class="ruble-sign">&#x20bd;</span></span>
               </p>
             </div>
 
