Добавляет компонент кнопки избранного

--- a/source/activity-projects.html
+++ b/source/activity-projects.html
@@ -46,12 +46,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star button-star--active">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--voted">
@@ -64,12 +59,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--against">
@@ -82,12 +72,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--disabled">
@@ -100,12 +85,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -118,12 +98,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -136,12 +111,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--voted">
@@ -154,12 +124,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--against">
@@ -172,12 +137,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--disabled">
@@ -190,12 +150,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -208,12 +163,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -226,12 +176,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--voted">
@@ -244,12 +189,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--against">
@@ -262,12 +202,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--disabled">
@@ -280,12 +215,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -298,12 +228,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
         </div>
 
