--- a/source/main-page.html
+++ b/source/main-page.html
@@ -528,12 +528,7 @@
               <a class="discussion__text link link--black" href="#">
                 Оценка качества услуг учреждений сферы государственной молодежной политики
               </a>
-              <button type="button" class="discussion__button-star button-star">
-                <span class="visually-hidden">Добавить в избранное</span>
-                <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-              </button>
+              <include src="source/components/button-star.html"></include>
             </div>
           </div>
           <div class="discussion__item discussion__item--used">
@@ -550,12 +545,7 @@
               <a class="discussion__text link link--black" href="#">
                 Развитие животноводства в Тульской области
               </a>
-              <button type="button" class="discussion__button-star button-star">
-                <span class="visually-hidden">Добавить в избранное</span>
-                <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-              </button>
+              <include src="source/components/button-star.html"></include>
             </div>
           </div>
           <div class="discussion__item">
@@ -572,12 +562,7 @@
               <a class="discussion__text link link--black" href="#">
                 Реконструкция моста через р. Дон на км 11+600 автомобильной дороги Новомосковское кольцо в Узловском районе Тульской области
               </a>
-              <button type="button" class="discussion__button-star button-star">
-                <span class="visually-hidden">Добавить в избранное</span>
-                <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-              </button>
+              <include src="source/components/button-star.html"></include>
             </div>
           </div>
           <div class="discussion__item discussion__item--used discussion__item--sign">
@@ -594,12 +579,7 @@
               <a class="discussion__text link link--black" href="#">
                 Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
               </a>
-              <button type="button" class="discussion__button-star button-star">
-                <span class="visually-hidden">Добавить в избранное</span>
-                <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-              </button>
+              <include src="source/components/button-star.html"></include>
             </div>
           </div>
           <div class="discussion__item">
@@ -616,12 +596,7 @@
               <a class="discussion__text link link--black" href="#">
                 Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
               </a>
-              <button type="button" class="discussion__button-star button-star">
-                <span class="visually-hidden">Добавить в избранное</span>
-                <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-star"></use>
-                </svg>
-              </button>
+              <include src="source/components/button-star.html"></include>
             </div>
           </div>
         </div>
