--- a/source/project-page.html
+++ b/source/project-page.html
@@ -41,11 +41,11 @@
                   <span class="project-meta__item-value">Голосование окончено</span>
                 </p>
 
-                <button class="project-meta__fovorite-btn button-star" type="button" data-tooltip="В избранное" data-flow="down">
-                  <svg width="20" height="19">
+                <button class="button-star" type="button" data-tooltip="В избранное" data-flow="down">
+                  <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-star"></use>
                   </svg>
-                  <span class="project-meta__fovorite-btn-text">В избранное</span>
+                  <span class="button-star__text">В избранное</span>
                 </button>
               </div>
             </div>
