--- a/source/projects-winners.html
+++ b/source/projects-winners.html
@@ -128,12 +128,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--win">
@@ -146,12 +141,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--win">
@@ -164,12 +154,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--win">
@@ -182,12 +167,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -200,12 +180,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -218,12 +193,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -236,12 +206,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -254,12 +219,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -272,12 +232,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -290,12 +245,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -308,12 +258,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -326,12 +271,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -344,12 +284,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -362,12 +297,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -380,12 +310,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
         </div>
 
