--- a/source/projects.html
+++ b/source/projects.html
@@ -107,12 +107,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star button-star--active">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--voted">
@@ -125,12 +120,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--against">
@@ -143,12 +133,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--disabled">
@@ -161,12 +146,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -179,12 +159,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -197,12 +172,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--voted">
@@ -215,12 +185,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--against">
@@ -233,12 +198,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--disabled">
@@ -251,12 +211,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -269,12 +224,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -287,12 +237,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--voted">
@@ -305,12 +250,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--against">
@@ -323,12 +263,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item project-item--disabled">
@@ -341,12 +276,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
 
           <article class="project-item">
@@ -359,12 +289,7 @@
               </p>
             </a>
 
-            <button type="button" class="button-star">
-              <span class="visually-hidden">Добавить в избранное</span>
-              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="img/sprite.svg#icon-star"></use>
-              </svg>
-            </button>
+            <include src="source/components/button-star.html"></include>
           </article>
         </div>
 
