--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -39,7 +39,7 @@
       </section>
       <section class="discussion-list">
         <div class="container discussion-list__container">
-          <h2>Текст комментируемого докумена:</h2>
+          <h2>Текст комментируемого документа:</h2>
           <div class="discussion-list__item discussion-item">
             <div class="discussion-item__content">
               <div class="discussion-content">
