Актуализирует состояние проекта

--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -956,6 +956,7 @@
     </main>
 
     <include src="source/components/footer.html"></include>
+    <include src="source/components/cookie.html"></include>
     <include src="source/components/up-btn.html"></include>
 
         <div class="table-popup js-table-popup popup js-popup">
