--- a/source/news-item.html
+++ b/source/news-item.html
@@ -43,6 +43,7 @@
     </main>
 
     <include src="source/components/footer.html"></include>
+    <include src="source/components/cookie.html"></include>
     <include src="source/components/up-btn.html"></include>
 
     <script src="js/libs.js"></script>
