Добавляет тултип на стр обсуждения

--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -39,7 +39,16 @@
       </section>
       <section class="discussion-list">
         <div class="container discussion-list__container">
-          <h2>Текст комментируемого документа:</h2>
+          <div class="discussion-list__title-wrapper">
+            <h2>Текст комментируемого документа</h2>
+            <div class="info-tooltip" tabindex="0">
+              <span class="info-tooltip__sign">?</span>
+              <div class="info-tooltip__text">
+                <p>Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель.</p>
+                <p>Иногда текст-«рыба» также используется композиторами при написании музыки. Они напевают его перед тем, как сочинены соответствующие слова. Уже в 16-том веке рыбные тексты имели широкое распространение у печатников.</p>
+              </div>
+            </div>
+          </div>
           <div class="discussion-list__item discussion-item">
             <div class="discussion-item__content">
               <div class="discussion-content">
