Добавляет тайтлы селектам

--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -70,27 +70,27 @@
         </div>
         <div class="form-select js-form-select">
             <select name="projects-select" id="projects-select">
-              <option value="Библиотеки">Библиотеки</option>
-              <option value="Благоустройство">Благоустройство</option>
-              <option value="Бытовое обслуживание">Бытовое обслуживание</option>
-              <option value="Водоснабжение">Водоснабжение</option>
-              <option value="Детские площадки">Детские площадки</option>
-              <option value="Дороги">Дороги</option>
-              <option value="Доходогенерирующие проекты">Доходогенерирующие проекты</option>
-              <option value="ЖКХ">ЖКХ</option>
-              <option value="Массовое мероприятие">Массовое мероприятие</option>
-              <option value="Места захоронения">Места захоронения</option>
-              <option value="Места массового пользования">Места массового пользования</option>
-              <option value="Муниципальные образовательные организации">Муниципальные образовательные организации</option>
-              <option value="Народное творчество">Народное творчество</option>
-              <option value="Объекты культурного наследия">Объекты культурного наследия</option>
-              <option value="Объекты культуры">Объекты культуры</option>
-              <option value="Пожарная безопасность">Пожарная безопасность</option>
-              <option value="Сбор бытовых отходов">Сбор бытовых отходов</option>
-              <option value="Связь">Связь</option>
-              <option value="Спорт">Спорт</option>
-              <option value="Туризм">Туризм</option>
-              <option value="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
+              <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
+              <option value="Благоустройство" title="Благоустройство">Благоустройство</option>
+              <option value="Бытовое обслуживание" title="Бытовое обслуживание">Бытовое обслуживание</option>
+              <option value="Водоснабжение" title="Водоснабжение">Водоснабжение</option>
+              <option value="Детские площадки" title="Детские площадки">Детские площадки</option>
+              <option value="Дороги" title="Дороги">Дороги</option>
+              <option value="Доходогенерирующие проекты" title="Доходогенерирующие проекты">Доходогенерирующие проекты</option>
+              <option value="ЖКХ" title="ЖКХ">ЖКХ</option>
+              <option value="Массовое мероприятие" title="Массовое мероприятие">Массовое мероприятие</option>
+              <option value="Места захоронения" title="Места захоронения">Места захоронения</option>
+              <option value="Места массового пользования" title="Места массового пользования">Места массового пользования</option>
+              <option value="Муниципальные образовательные организации" title="Муниципальные образовательные организации">Муниципальные образовательные организации</option>
+              <option value="Народное творчество" title="Народное творчество">Народное творчество</option>
+              <option value="Объекты культурного наследия" title="Объекты культурного наследия">Объекты культурного наследия</option>
+              <option value="Объекты культуры" title="Объекты культуры">Объекты культуры</option>
+              <option value="Пожарная безопасность" title="Пожарная безопасность">Пожарная безопасность</option>
+              <option value="Сбор бытовых отходов" title="Сбор бытовых отходов">Сбор бытовых отходов</option>
+              <option value="Связь" title="Связь">Связь</option>
+              <option value="Спорт" title="Спорт">Спорт</option>
+              <option value="Туризм" title="Туризм">Туризм</option>
+              <option value="Фельдшерско-акушерские пункты" title="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
             </select>
         </div>
       </form>
