Исправляет и добавляет звездочки

--- a/source/discussions.html
+++ b/source/discussions.html
@@ -55,7 +55,7 @@
             </div>
             <div class="discussion__content">
               <a class="discussion__text link link--black" href="#">
-                Развитие животноводства в Тульской области
+                Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области Развитие животноводства в Тульской области
               </a>
               <include src="source/components/button-star.html"></include>
             </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="discussion__content">
               <a class="discussion__text link link--black" href="#">
-                Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
+                Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад» Государственное дошкольное образовательное учреждение Тульской области «Узловский детский сад»
               </a>
               <include src="source/components/button-star.html"></include>
             </div>
