--- a/source/main-page.html
+++ b/source/main-page.html
@@ -594,7 +594,7 @@
             </div>
             <div class="discussion__content">
               <a class="discussion__text link link--black" href="#">
-                Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
+                Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева" Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева" Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева" Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева" Оказание услуг по организации питания пациентов ГУЗ "ТОКПБ №1 им. Н.П. Каменева"
               </a>
               <include src="source/components/button-star.html"></include>
             </div>
