--- a/source/index.html
+++ b/source/index.html
@@ -19,31 +19,44 @@
           <li>
             <a href="page-404.html" target="_blank">404</a>
           </li>
-          <br>
+          <br />
           <li>
             <a href="composite-poll.html" target="_blank">Составной опрос</a>
           </li>
           <li>
-            <a href="composite-poll-process.html" target="_blank">Составной опрос - ждём результат</a>
+            <a href="composite-poll-process.html" target="_blank"
+              >Составной опрос - ждём результат</a
+            >
           </li>
           <li>
-            <a href="composite-poll-result.html" target="_blank">Составной опрос - результат</a>
+            <a href="composite-poll-result.html" target="_blank"
+              >Составной опрос - результат</a
+            >
           </li>
-          <br>
+          <br />
           <li>
             <a href="projects.html" target="_blank">Разводящая проекты</a>
           </li>
 
           <li>
-            <a href="projects-against.html" target="_blank">Разводящая проекты -- Проголосовать против всех</a>
+            <a href="projects-against.html" target="_blank"
+              >Разводящая проекты -- Проголосовать против всех</a
+            >
           </li>
           <li>
-            <a href="projects-winners.html" target="_blank">Разводящая проекты -- Победители</a>
+            <a href="projects-winners.html" target="_blank"
+              >Разводящая проекты -- Победители</a
+            >
           </li>
           <li>
             <a href="project-page.html" target="_blank">Проект</a>
           </li>
-          <br>
+          <li>
+            <a href="project-page_banner-without-text.html" target="_blank">
+              Проект -- Информационный баннер без заголовка
+            </a>
+          </li>
+          <br />
           <li>
             <a href="news.html" target="_blank">Новости и уведомления</a>
           </li>
@@ -57,36 +70,49 @@
             <a href="news-item.html" target="_blank">Страница одной новости</a>
           </li>
           <li>
-            <a href="discussion-item.html" target="_blank">Страница одного обсуждения</a>
+            <a href="discussion-item.html" target="_blank"
+              >Страница одного обсуждения</a
+            >
           </li>
           <li>
             <a href="comment-popup.html" target="_blank">Попапы комментария</a>
           </li>
-          <br>
+          <br />
           <li>
             <a href="poll-page.html" target="_blank">Страница одного опроса</a>
           </li>
           <li>
-            <a href="poll-page-finished.html" target="_blank">Страница одного опроса - работа с полученными комментариями</a>
+            <a href="poll-page-finished.html" target="_blank"
+              >Страница одного опроса - работа с полученными комментариями</a
+            >
           </li>
-          <br>
+          <br />
           <li>
-            <a href="activity-discussions.html" target="_blank">Активность -- Обсуждения</a>
-          </li>
-          <li>
-            <a href="activity-projects.html" target="_blank">Активность -- Проекты</a>
-          </li>
-          <li>
-            <a href="activity-surveys.html" target="_blank">Активность -- Опросы</a>
+            <a href="activity-discussions.html" target="_blank"
+              >Активность -- Обсуждения</a
+            >
           </li>
           <li>
-            <a href="activity-partners.html" target="_blank">Активность -- На сторонних ресурсах </a>
+            <a href="activity-projects.html" target="_blank"
+              >Активность -- Проекты</a
+            >
           </li>
-          <br>
           <li>
-            <a href="widget-for-third-party-resource.html" target="_blank">Виджеты для сторонних ресурсов</a>
+            <a href="activity-surveys.html" target="_blank"
+              >Активность -- Опросы</a
+            >
           </li>
-
+          <li>
+            <a href="activity-partners.html" target="_blank"
+              >Активность -- На сторонних ресурсах
+            </a>
+          </li>
+          <br />
+          <li>
+            <a href="widget-for-third-party-resource.html" target="_blank"
+              >Виджеты для сторонних ресурсов</a
+            >
+          </li>
         </ul>
       </div>
     </main>
