обновил вёрстку инфо  баннера в соответсвии с клиентской

--- a/source/project-page_banner-without-text.html
+++ b/source/project-page_banner-without-text.html
@@ -46,30 +46,25 @@
             />
           </svg>
 
-          <p class="info-banner__text">
-            В соответствии с приказом Министерства строительства Российской
-            Федерации № 75895422 от 20.01.2020 персональные данные участников
-            голосования (в составе ФИО, дата рождения, номер паспорта) будут
-            переданы уполномоченным ответственной организации. Рыбным текстом
-            называется текст, служащий для временного наполнения макета в
-            публикациях или производстве веб-сайтов, пока В соответствии с
-            приказом Министерства строительства Российской Федерации № 75895422
-            от 20.01.2020 персональные данные участников голосования (в составе
-            ФИО, дата рождения, номер паспорта) будут переданы уполномоченным
-            ответственной организации. Рыбным текстом называется текст, служащий
-            для временного наполнения макета в публикациях или производстве
-            веб-сайтов, пока
+          <p class="info-banner__title">
+            Данное голосование является открытым
           </p>
 
-          <button class="info-banner__button">
-            <span>
+          <p class="info-banner__text">
+            В соответствии с приказом Министерства строительства Российской Федерации № 75895422 от 20.01.2020 персональные данные участников голосования (в составе ФИО, дата рождения, номер паспорта) будут переданы уполномоченным ответственной организации. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока
+          </p>
+
+          <button class="info-banner__button info-banner-button">
+            <span class="info-banner-button__text">
               Развернуть
             </span>
 
             <svg
-              class="arrow-down"
+              class="arrow-down info-banner-button__icon"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
+              width="13"
+              height="8"
               viewBox="0 0 14 8"
             >
               <path
