Добавил страницу создания предложения

--- a/source/index.html
+++ b/source/index.html
@@ -113,6 +113,12 @@
               >Виджеты для сторонних ресурсов</a
             >
           </li>
+          <br />
+          <li>
+            <a href="landscaping.html" target="_blank"
+              >Форма создания предложения 1</a
+            >
+          </li>
         </ul>
       </div>
     </main>
