подгоняет мобильную версию под пп

--- a/source/proposal-page-2.html
+++ b/source/proposal-page-2.html
@@ -7,7 +7,7 @@
 
     <include src="source/components/header.html"></include>
 
-    <main class="project-page page-content page-content--with-back-btn">
+    <main class="project-page page-content page-content--proposal">
 
       <div class="container">
         <div class="info-banner info-banner--warning">
