добавляет страницы в разводящую

--- a/source/index.html
+++ b/source/index.html
@@ -98,6 +98,13 @@
           <a href="landscaping.html" target="_blank">Форма создания предложения 1</a>
         </li>
         <li>
+          <a href="proposal-page-2.html" target="_blank">Форма создания предложения 2-3</a>
+        </li>
+        <li>
+          <a href="proposal-page-3.html" target="_blank">Форма создания предложения 4-5</a>
+        </li>
+        <br />
+        <li>
           <a href="improvement-fork1.html" target="_blank">Благоустройство разводящая 1</a>
         </li>
       </ul>
