--- a/source/landscaping.html
+++ b/source/landscaping.html
@@ -38,7 +38,7 @@
           <div class="landscaping-form__section landscaping-form__section--upload">
             <h2 class="landscaping-form__title">Загрузка изображений</h2>
             <p class="landscaping-form__tip">
-              Если необходимо, вы можете <br> загрузить изображения. Максимум 5
+              Если необходимо, вы можете загрузить изображения. Максимум 5
               изображенний, формата JPEG, PNG, GIF.
             </p>
             <div class="landscaping-form__img-container">
@@ -76,13 +76,6 @@
   <include src="source/components/footer.html"></include>
   <include src="source/components/cookie.html"></include>
   <include src="source/components/up-btn.html"></include>
-
-  <template id="upload-img">
-    <div class="landscaping-form__img">
-      <button type="button" class="landscaping-form__remove-img"></button>
-      <img src="" alt="preview" height="215" width="215" />
-    </div>
-  </template>
 
   <template id="pin">
     <button type="button" class="landscaping__pin"><img src="img/pin.png" width="36" height="54" draggable="false"
