--- a/source/index.html
+++ b/source/index.html
@@ -109,6 +109,9 @@
         <li>
           <a href="proposal-page-voting.html" target="_blank">Форма создания предложения 6-7</a>
         </li>
+        <li>
+          <a href="proposal-page-implemented.html" target="_blank">Форма создания предложения 8</a>
+        </li>
         <br />
         <li>
           <a href="improvement-fork1.html" target="_blank">Благоустройство разводящая 1</a>
